--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "ui-components": "^1.0.0"
+    "core-ui": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
